fixed footer text alignment

--- a/resources/css/stylesheet.css
+++ b/resources/css/stylesheet.css
@@ -151,6 +151,9 @@ footer {
   background-color: black;
   text-align: left;
   height: 5rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   }
 
 footer p {
